# SLib

./: .gitignore  README
.github/workflows/: codeql-analysis.yml
doc/: README
include/: Pool.cpp
src/: AnException.h  AutoXMLChar.h  Base64.cpp  Base64.h  BlockingQueue.cpp  BlockingQueue.h  CMakeLists.txt  Date.cpp  Date.h  EMail.cpp  EMail.h  EnEx.cpp  EnEx.h  File.cpp  File.h  GSocket.h  Hash.cpp  Hash.h  HttpClient.cpp  HttpClient.h  Interval.cpp  Interval.h  Lock.h  Log.cpp  Log.h  LogDump.cpp  LogFile.cpp  LogFile.h  LogFile2.cpp  LogFile2.h  LogMsg.cpp  LogMsg.h  Makefile.3rdparty.manual.mac  Makefile.3rdparty.manual.msvc64  Makefile.3rdparty.msvc64  Makefile.aix  Makefile.borl  Makefile.cygwin  Makefile.libharu.mac  Makefile.libharu.win64dll  (+87 more)
src/hbuild/: BulkReplicate.Recv.Body.tmpl  BulkReplicate.Recv.Header.tmpl  BulkReplicate.Send.Body.tmpl  BulkReplicate.Send.Header.tmpl  C#ObjHeader.delete.tmpl  C#ObjHeader.insert.tmpl  C#ObjHeader.insertguid.tmpl  C#ObjHeader.select.tmpl  C#ObjHeader.start.tmpl  C#ObjHeader.update.tmpl  CRUD.Delete.Body.tmpl  CRUD.Delete.Header.tmpl  CRUD.GetAll.Body.tmpl  CRUD.GetOne.Body.tmpl  CRUD.GetOne.Header.tmpl  CRUD.GetPaged.Body.tmpl  CRUD.Update.Body.tmpl  CRUD.Update.Header.tmpl  CppObjBody.delete.tmpl  CppObjBody.insert.tmpl  CppObjBody.insertguid.tmpl  CppObjBody.select.tmpl  CppObjBody.start.tmpl  CppObjBody.update.tmpl  CppObjHeader.delete.tmpl  CppObjHeader.insert.tmpl  CppObjHeader.insertguid.tmpl  CppObjHeader.select.tmpl  CppObjHeader.start.tmpl  CppObjHeader.update.tmpl  CppObjHeader99.tmpl  CppTestBody.crud.tmpl  CppTestBody.page.tmpl  CppTestBody.start.tmpl  CppTestHeader.crud.tmpl  CppTestHeader.page.tmpl  CppTestHeader.start.tmpl  HelixAutoAsset.cpp  HelixAutoAsset.h  HelixBuilder.cpp  (+70 more)
src/test/: Makefile.mac  Makefile.mac.test  dummy.xml  sepConXml.awk  test_64.cpp  test_date.cpp  test_membuf.cpp  test_twine.cpp  test_twine_bigmem.cpp  test_twine_find.cpp  test_twine_num.cpp  test_twine_str.cpp  test_xml.cpp
src/test/report/: index.html  results.xsl
test/: Makefile.mac  Makefile.msvc32  Makefile.msvc64  SLibTest.cpp  SLibTest.h
test/bugs/: Bug0001TwineSplit.cpp
test/date/: TestDate000.cpp  TestDate001Allocation.cpp  TestDate002Copying.cpp  TestDate003Updating.cpp
test/twine/: TestTwine000.cpp  TestTwine001Allocation.cpp  TestTwine002Copying.cpp  TestTwine003Appending.cpp  TestTwine003Assignment.cpp  TestTwine004Appending.cpp  TestTwine004Split.cpp  TestTwine005Split.cpp  TestTwine006Convert.cpp  TestTwine007ArrayAccess.cpp  TestTwine008Cast.cpp  TestTwine009Compare.cpp  TestTwine010CheckSize.cpp
